School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_If_While/if_empty.deca
{
    boolean b1 = true;
    boolean b2 = false;
    if(b1 && b2){}
}