School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_If_While/doubleElse.deca
// Double else
{
    if (true) {
        print("true");
    } else {
        print("false");
    } else {
        print("false");
    }
}